--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,10 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Generated audit data
+data/audits/*.json
+!data/audits/.gitkeep
+
+# Cache
+cache/
