--- a/.gitignore
+++ b/.gitignore
@@ -144,9 +144,12 @@ dist
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-# Generated audit data
-data/audits/*.json
-!data/audits/.gitkeep
-
 # Cache
 cache/
+
+# Prisma
+prisma/migrations/
+
+# Env
+.env
+.env.local
